--- a/Tally.Api/Tally.Api.csproj
+++ b/Tally.Api/Tally.Api.csproj
@@ -15,4 +15,9 @@
         <Folder Include="Controllers\"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Tally.Repository\Tally.Repository.csproj" />
+      <ProjectReference Include="..\Tally.Service\Tally.Service.csproj" />
+    </ItemGroup>
+
 </Project>
