临时整理，格式化代码

--- a/Tally.Api/appsettings.json
+++ b/Tally.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "************************************************"
+    "SqlServer": "***********************未配置连接字符串***********************"
   }
 }
