--- a/Tally.Common/Tally.Common.csproj
+++ b/Tally.Common/Tally.Common.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Tally.Common\Tally.Common.csproj"/>
-        <ProjectReference Include="..\Tally.IService\Tally.IService.csproj"/>
+        <ProjectReference Include="..\Tally.Models\Tally.Models.csproj"/>
     </ItemGroup>
 
 </Project>
